<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:enabled="false"
            android:title="@string/menu_myinfo" />
        <item
            android:id="@+id/bank"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:enabled="false"
            android:title="@string/menu_bank" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:enabled="false"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/menu_logout" />
    </group>
</menu>